apollo-federation/src/connectors/snapshots/apollo_federation__connectors__url_template__test_parse__basic_absolute_url.snap
---
source: apollo-federation/src/connectors/url_template.rs
expression: "URLTemplate::from_str(\"http://example.com\")"
---
Ok(
    URLTemplate {
        base: Some(
            Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "example.com",
                    ),
                ),
                port: None,
                path: "/",
                query: None,
                fragment: None,
            },
        ),
        path: [],
        query: [],
    },
)
